--- a/styles.css
+++ b/styles.css
@@ -202,7 +202,7 @@ p {
     padding: 80px 0;
 }
 
-.contact__form-container .contact__input {
+.contact__input {
     border: 2px solid #5e9e8d;
 }
 
